// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditOntologyForm should match snapshot when add operation 1`] = `
<Connect
  actions={
    Object {
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  annotationProperties={Array []}
  initialData={Object {}}
  mapToProps={[Function]}
  operation="add"
  selectedElementProperties={Object {}}
  setSelectedElementProperties={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`EditOntologyForm should match snapshot when update operation 1`] = `
<Connect
  actions={
    Object {
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  annotationProperties={Array []}
  initialData={Object {}}
  mapToProps={[Function]}
  operation="update"
  selectedElementProperties={Object {}}
  setSelectedElementProperties={[MockFunction]}
>
  <Component />
</Connect>
`;
